# AcmeLaneDetectionModule

./: .travis.yml  CMakeLists.txt  readme.md
app/: CMakeLists.txt  LaneDetection.cpp  PlotManager.cpp  SystemManager.cpp  build_g29.sh  g29.cpp  main.cpp  main.cpp.bak  main.new
docs/html/: _lane_detection_8cpp.html  _lane_detection_8cpp__incl.map  _lane_detection_8cpp__incl.md5  _lane_detection_8hpp.html  _lane_detection_8hpp__dep__incl.map  _lane_detection_8hpp__dep__incl.md5  _lane_detection_8hpp__incl.map  _lane_detection_8hpp__incl.md5  _lane_detection_8hpp_source.html  _plot_manager_8cpp.html  _plot_manager_8cpp__incl.map  _plot_manager_8cpp__incl.md5  _plot_manager_8hpp.html  _plot_manager_8hpp__dep__incl.map  _plot_manager_8hpp__dep__incl.md5  _plot_manager_8hpp__incl.map  _plot_manager_8hpp__incl.md5  _plot_manager_8hpp_source.html  _system_manager_8cpp.html  _system_manager_8cpp__incl.map  _system_manager_8cpp__incl.md5  _system_manager_8hpp.html  _system_manager_8hpp__dep__incl.map  _system_manager_8hpp__dep__incl.md5  _system_manager_8hpp__incl.map  _system_manager_8hpp__incl.md5  _system_manager_8hpp_source.html  annotated.html  class_lane_detection-members.html  class_lane_detection.html  class_plot_manager-members.html  class_plot_manager.html  class_system_manager-members.html  class_system_manager.html  classes.html  dir_000000_000001.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  (+6 more)
docs/latex/: _lane_detection_8cpp.tex  _lane_detection_8cpp__incl.md5  _lane_detection_8hpp.tex  _lane_detection_8hpp__dep__incl.md5  _lane_detection_8hpp__incl.md5  _plot_manager_8cpp.tex  _plot_manager_8cpp__incl.md5  _plot_manager_8hpp.tex  _plot_manager_8hpp__dep__incl.md5  _plot_manager_8hpp__incl.md5  _system_manager_8cpp.tex  _system_manager_8cpp__incl.md5  _system_manager_8hpp.tex  _system_manager_8hpp__dep__incl.md5  _system_manager_8hpp__incl.md5  annotated.tex  class_lane_detection.tex  class_plot_manager.tex  class_system_manager.tex  files.tex  (+6 more)
include/: LaneDetection.hpp  PlotManager.hpp  SystemManager.hpp
results/: cppcheck_output.txt  cpplint_output.txt
test/: CMakeLists.txt  LaneDetectionTest.cpp  Makefile  MockTest.cpp  SystemManagerTest.cpp  cmake_install.cmake  main.cpp
(+21 files in other folders)
